fix issue of wizard not opening if no user is logged in